--- a/ApresentaçãoKick.ipynb
+++ b/ApresentaçãoKick.ipynb
@@ -29,11 +29,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Criando o PDF\n",
+    "#criando o pdf\n",
     "pdf = FPDF()\n",
     "pdf.add_page()\n",
     "\n",
-    "# Configuração básica\n",
+    "#configuração básica\n",
     "pdf.set_font(\"Arial\", size=15)\n",
     "pdf.cell(0, 20, \"Análise sobre a quantidade de distribuição de alunos no Brasil\", align='C', ln=True)\n",
     "pdf.ln(10)\n",
@@ -43,23 +43,21 @@
     "\"atendidos por várias escolas em diferentes municípios do Brasil. Esses dados vêm de um programa chamado PDA, \"\n",
     "\"que rola entre 2017 e 2019, e mostra como o governo distribuiu recursos para apoiar as escolas.\"\n",
     ")\n",
-    "\n",
-    "# Adicionando introdução no PDF\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, introducao)\n",
     "pdf.ln(10)\n",
     "\n",
-    "# Lendo o arquivo CSV\n",
+    "#lendo o arquivo csv\n",
     "leitor_pda = pd.read_csv('PDA_PNME_2017_2018_2019.csv', sep=';', encoding='latin-1')\n",
     "\n",
-    "# Convertendo a coluna de quantidade de alunos para numérica\n",
+    "#convertendo a coluna de quantidade de alunos para numérica\n",
     "leitor_pda['QUANT_ALUNADO'] = pd.to_numeric(leitor_pda['QUANT_ALUNADO'], errors='coerce')\n",
     "leitor_pda.dropna(subset=['QUANT_ALUNADO'], inplace=True)\n",
     "\n",
-    "# Agrupando os dados por município e somando a quantidade de alunos\n",
+    "#agrupando os dados por município e somando a quantidade de alunos\n",
     "municipio_alunado = leitor_pda.groupby('NOME_MUNICIPIO')['QUANT_ALUNADO'].sum().nlargest(25)\n",
     "\n",
-    "# Gerando gráfico de barras com os 25 municípios com maior número de alunos\n",
+    "#gerando gráfico de barras com os 25 municípios com maior número de alunos\n",
     "plt.figure(figsize=(10, 6))\n",
     "municipio_alunado.plot(kind='bar')\n",
     "plt.xlabel('Nome do Município')\n",
@@ -67,14 +65,14 @@
     "plt.title('Total de Alunos por Município (Top 25)')\n",
     "plt.xticks(rotation=90)\n",
     "\n",
-    "# Salvando o gráfico como imagem\n",
+    "#salvando o gráfico como imagem\n",
     "plt.tight_layout()\n",
     "plt.savefig('grafico_municipios.png', format='png')\n",
     "plt.close()\n",
     "\n",
-    "# Inserindo a imagem do gráfico no PDF\n",
-    "pdf.image('grafico_municipios.png', x=10, y=pdf.get_y() + 10, w=190)  # Posiciona a imagem logo abaixo do texto\n",
-    "pdf.ln(140)  # Ajuste de espaço após a imagem\n",
+    "#inserindo a imagem do gráfico no pdf\n",
+    "pdf.image('grafico_municipios.png', x=10, y=pdf.get_y() + 10, w=190)  #posiciona a imagem logo abaixo do texto\n",
+    "pdf.ln(140)  #ajuste de espaço após a imagem\n",
     "\n",
     "resumo_de_dados = (\n",
     "\"O arquivo contém várias informações, mas para essa análise, foquei principalmente em dois pontos:\"\n",
@@ -82,51 +80,48 @@
     "\" A quantidade de alunos em cada escola.\"\n",
     "\" Então, basicamente, a gente vai ver quais cidades tiveram mais alunos beneficiados pelo programa.\"\n",
     ")\n",
-    "\n",
-    "# Adicionando resumo no PDF\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, resumo_de_dados)\n",
     "pdf.ln(10)\n",
     "\n",
-    "# Gerando gráfico de pizza com os 10 maiores municípios\n",
+    "#gerando gráfico de pizza com os 10 maiores municípios\n",
     "top_10_alunado = municipio_alunado.nlargest(10)\n",
     "plt.figure(figsize=(8, 8))\n",
     "top_10_alunado.plot(kind='pie', autopct='%1.1f%%')\n",
     "plt.title('Distribuição da Quantidade de Alunos (Top 10 Municípios)')\n",
     "plt.ylabel('')\n",
     "\n",
-    "# Salvando o gráfico como imagem\n",
+    "#salvando o gráfico como imagem\n",
     "plt.savefig('grafico_pizza.png', format='png')\n",
     "plt.close()\n",
     "\n",
-    "# Adicionando uma nova página e inserindo o texto de análise de municípios\n",
+    "#adicionando uma nova página e inserindo o texto de análise de municípios\n",
     "pdf.add_page()\n",
     "\n",
     "analise_de_municipios = (\n",
     "\"A primeira coisa que fiz foi organizar os municípios com base no número de alunos. Eu peguei os 25 municípios com a maior quantidade de alunos,\"\n",
     "\" e o resultado foi bem interessante. Por exemplo, Salvador, João Pessoa e Natal são os que lideram o ranking com o maior número de alunos.\"\n",
     ")\n",
-    "\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, analise_de_municipios)\n",
-    "pdf.ln(10)  # Reduzido o espaçamento entre o texto e o gráfico\n",
+    "pdf.ln(10)  #reduzido o espaçamento entre o texto e o gráfico\n",
     "\n",
-    "# Inserindo o gráfico de pizza após o texto de análise\n",
+    "#inserindo o gráfico de pizza após o texto de análise\n",
     "pdf.image('grafico_pizza.png', x=10, y=pdf.get_y() + 10, w=190)\n",
-    "pdf.ln(190)  # Ajuste de espaço após a imagem\n",
+    "pdf.ln(190)  #ajuste de espaço após a imagem\n",
     "\n",
-    "# Estatísticas adicionais\n",
+    "#estatísticas adicionais\n",
     "total_alunos = leitor_pda['QUANT_ALUNADO'].sum()\n",
     "municipio_max_alunos = municipio_alunado.idxmax()\n",
     "municipio_min_alunos = municipio_alunado.idxmin()\n",
     "\n",
-    "# Adicionando texto com estatísticas no PDF\n",
+    "#adicionando texto com estatísticas no pdf\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.cell(0, 10, f\"Total de alunos: {total_alunos}\", ln=True)\n",
     "pdf.cell(0, 10, f\"Município com mais alunos: {municipio_max_alunos}\", ln=True)\n",
     "pdf.cell(0, 10, f\"Município com menos alunos: {municipio_min_alunos}\", ln=True)\n",
     "\n",
-    "# Adicionando uma nova página e inserindo o resto da apresentação\n",
+    "#adicionando uma nova página e inserindo o resto da apresentação\n",
     "pdf.add_page()\n",
     "\n",
     "distribuicao_e_estatisticas = (\n",
@@ -138,7 +133,6 @@
     "\" Salvador é o município com o maior número de alunos.\"\n",
     "\" E o município que ficou com menos alunos dentro do Top 25 foi Simões Filho.\"\n",
     ")\n",
-    "\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, distribuicao_e_estatisticas)\n",
     "pdf.ln(10)\n",
@@ -147,7 +141,6 @@
     "\"Concluindo no geral, o que dá pra perceber é que a maioria dos alunos beneficiados está concentrada nas capitais e em cidades maiores.\"\n",
     "\" Salvador realmente se destaca como a cidade que mais recebeu apoio, e esse tipo de análise ajuda a entender melhor como os recursos do programa foram distribuídos pelo país.\"\n",
     ")\n",
-    "\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, conclusao)\n",
     "pdf.ln(10)\n",
@@ -158,12 +151,11 @@
     "\" Esses dados destacam a concentração de apoio em cidades grandes, que precisam de mais suporte por atenderem mais alunos.\"\n",
     "\" No geral, a análise ajuda a entender melhor como o programa foi distribuído e em quais regiões seu impacto foi maior.\"\n",
     ")\n",
-    "\n",
     "pdf.set_font(\"Arial\", size=12)\n",
     "pdf.multi_cell(0, 10, analise_geral)\n",
     "pdf.ln(10)\n",
     "\n",
-    "# Salvando o PDF\n",
+    "#salvando o pdf\n",
     "pdf.output('ApresentacaoKick.pdf')\n"
    ]
   },
